--- a/polybookexchange/templates/polybookexchange/search.html
+++ b/polybookexchange/templates/polybookexchange/search.html
@@ -1,19 +1,19 @@
 {% extends "polybookexchange/base.html" %}
-{% load i18n %}
-{% load polybookexchange_extras %}
+{% load i18n polybookexchange_extras %}
 
 {% block title %}{{block.super}} :: {% trans "Search" %}{% endblock %}
 
 {% block content %}
 
     <h1 class="page-header">{% trans "Search" %}</h1>
+    <hr />
 
-    {% trans "This page allow you to search available books." %}<br /><br />
+    {% trans "This page allows you to search available books." %}<br /><br />
 
     <form action="" method="">
 
-        <div class="form-group">
-            <label>{% trans "ISBN" %}</label>
+        <div class="form-group mb-3">
+            <label class="form-label">{% trans "ISBN" %}</label>
             <input type="text" name="isbn" value="{{isbn}}" class="form-control">
         </div>
 
@@ -22,25 +22,22 @@
         <div class="container-fluid">
 
             <div class="row">
-                <div class="col-md-6">
+                <div class="col-12 col-md-6 mb-3">
                     <div class="form-group">
-                        <label>{% trans "Title" %}</label>
+                        <label class="form-label">{% trans "Title" %}</label>
                         <input type="text" name="title" value="{{title}}" class="form-control">
                     </div>
                 </div>
-                <div class="col-md-6">
+                <div class="col-12 col-md-6 mb-3">
                     <div class="form-group">
-                        <label>{% trans "Author" %}</label>
+                        <label class="form-label">{% trans "Author" %}</label>
                         <input type="text" name="author" value="{{author}}" class="form-control">
                     </div>
                 </div>
-            </div>
-
-            <div class="row">
-                <div class="col-md-6">
+                <div class="col-12 col-md-6 mb-3">
                     <div class="form-group">
-                        <label>{% trans "Section" %}</label>
-                        <select name="sec" class="form-control">
+                        <label class="form-label">{% trans "Section" %}</label>
+                        <select name="sec" class="form-select">
                             <option value="-1">{% trans "All" %}</option>
                             {% for sec in sections %}
                                 <option value="{{sec.pk}}" {% if sec.pk == section.pk %}selected = "selected"{% endif %}>{{sec.name|safe}}</option>
@@ -48,10 +45,10 @@
                         </select>
                     </div>
                 </div>
-                <div class="col-md-6">
+                <div class="col-12 col-md-6 mb-3">
                     <div class="form-group">
-                        <label>{% trans "Semester" %}</label>
-                        <select name="sem" class="form-control">
+                        <label class="form-label">{% trans "Semester" %}</label>
+                        <select name="sem" class="form-select">
                             <option value="-1">{% trans "All" %}</option>
                             {% for sem in semestres %}
                                 <option value="{{sem.pk}}" {% if sem.pk == semestre.pk %}selected = "selected"{% endif %}>{{sem.name|safe}}</option>
@@ -60,11 +57,18 @@
                     </div>
                 </div>
             </div>
+
+            <div class="row mb-3">
+                <div class="col">
+                    <div class="float-end">
+                        <button class="btn btn-primary" type="submit"><i class="fa fa-search"></i> {% trans "Search" %}</button>
+                        <a href="?" class="btn btn-warning"><i class="fa fa-refresh"></i> {% trans "Clear" %}</a>
+                    </div>
+                </div>
+            </div>
+
         </div>
 
-        <button class="btn btn-primary pull-right" type="submit"><i class="glyphicon glyphicon-search"></i> {% trans "Search" %}</button>
-        <a href="?" class="btn btn-warning pull-right" style="margin-right: 5px;"><i class="glyphicon glyphicon-refresh"></i> {% trans "Clear" %}</a>
-        <br /><br />
     </form>
 
     {% if liste %}
@@ -73,25 +77,29 @@
             {% show_small_book b %}
         {% endfor %}
 
+        <nav>
+            <ul class="pagination justify-content-center">
+                {% if liste.has_previous %}
+                    <li class="page-item"><a class="page-link" href="?page={{liste.previous_page_number}}&sem={{semestre.pk}}&sec={{section.pk}}&author={{author}}&title={{title}}&isbn={{isbn}}">&larr; {% trans "Previous" %}</a></li>
+                {% else %}
+                    <li class="page-item disabled"><a class="page-link" href="#">&larr; {% trans "Previous" %}</a></li>
+                {% endif %}
 
-        <ul class="pager">
-            {% if liste.has_previous %}
-            <li class="previous"><a href="?page={{liste.previous_page_number}}&sem={{semestre.pk}}&sec={{section.pk}}&author={{author}}&title={{title}}&isbn={{isbn}}">&larr; {% trans "Previous" %}</a></li>
-            {% else %}
-                <li class="previous disabled"><a href="#">&larr; {% trans "Previous" %}</a></li>
-            {% endif %}
+                <li class="page-item active"><span class="page-link">{% blocktrans with n=liste.number p=liste.paginator.num_pages %}Page {{n}} of {{p}}{% endblocktrans %}</span></li>
 
-            <li>{% blocktrans with n=liste.number p=liste.paginator.num_pages %}Page {{n}} of {{p}}{% endblocktrans %}</li>
+                {% if liste.has_next %}
+                    <li class="page-item"><a class="page-link" href="?page={{liste.next_page_number}}&sem={{semestre.pk}}&sec={{section.pk}}&author={{author}}&title={{title}}&isbn={{isbn}}">{% trans "Next" %} &rarr;</a></li>
+                {% else %}
+                    <li class="page-item disabled"><a class="page-link" href="#">{% trans "Next" %} &rarr;</a></li>
+                {% endif %}
 
-            {% if liste.has_next %}
-            <li class="next"><a href="?page={{liste.next_page_number}}&sem={{semestre.pk}}&sec={{section.pk}}&author={{author}}&title={{title}}&isbn={{isbn}}">{% trans "Next" %} &rarr;</a></li>
-            {% else %}
-                <li class="next disabled"><a href="#">{% trans "Next" %} &rarr;</a></li>
-            {% endif %}
+            </ul>
+        </nav>
 
-        </ul>
 
     {% endif %}
 
-    <script type="text/javascript">$('#polybook-menu-search').addClass('active');</script>
+    <script type="text/javascript">
+        $('#polybook-menu-search').addClass('active');
+    </script>
 {% endblock %}
