--- a/polybookexchange/templates/polybookexchange/add_book_new_book.html
+++ b/polybookexchange/templates/polybookexchange/add_book_new_book.html
@@ -1,45 +1,47 @@
 {% extends "polybookexchange/base.html" %}
-{% load i18n %}
-{% load polybookexchange_extras %}
+{% load i18n polybookexchange_extras %}
 
 {% block title %}{{block.super}} :: {% trans "New book to sell" %}{% endblock %}
 
 {% block content %}
 
-    <h1 class="page-header">{% trans "New book in database" %}</h2>
+    <h1 class="page-header">{% trans "New book in database" %}</h1>
+    <hr />
 
     <form method="POST" action="">
         {% csrf_token %}
 
         <div class="form-group">
-            <label>{% trans "Title:" %}</label>
+            <label class="form-label">{% trans "Title:" %}</label>
             <input name="title" type="text" class="form-control" value="{{book.title}}">
         </div>
 
         <div class="form-group">
-            <label>{% trans "Author(s):" %}</label>
+            <label class="form-label">{% trans "Author(s):" %}</label>
             <input name="authors" type="text" class="form-control" value="{% for a in book.author.all %}{% if not forloop.first %}, {% endif %}{{ a.name }}{% endfor %}">
-            <span class="help-text">{% trans "Use commas if more than one" %}</span>
+            <span class="form-text">{% trans "Use commas if more than one" %}</span>
         </div>
 
         <div class="form-group">
-            <label>{% trans "Editor:" %}</label>
+            <label class="form-label">{% trans "Editor:" %}</label>
             <input name="publisher" type="text" class="form-control" value="{{book.publisher.name}}">
-    </div>
-    <div class="form-group">
-        <label>{% trans "Year:" %}</label>
-        <input name="year" type="text" class="form-control" value="{{book.year}}">
-    </div>
-    <div class="form-group">
-        <label>{% trans "Edition:" %}</label>
-        <input name="edition" type="text" class="form-control" value="{{book.edition}}">
-    </div>
+        </div>
+        <div class="form-group">
+            <label class="form-label">{% trans "Year:" %}</label>
+            <input name="year" type="text" class="form-control" value="{{book.year}}">
+        </div>
+        <div class="form-group">
+            <label class="form-label">{% trans "Edition:" %}</label>
+            <input name="edition" type="text" class="form-control" value="{{book.edition}}">
+        </div>
 
-    <button type="submit" class="btn btn-primary pull-right"><i class="glyphicon glyphicon-plus"></i> {% trans "Submit" %}</button>
+        <button type="submit" class="btn btn-primary float-end"><i class="fas fa-plus"></i> {% trans "Submit" %}</button>
 
-</form>
+    </form>
 
 
-    <script type="text/javascript">$('#polybook-menu-admin').addClass('active');</script>
+    <script type="text/javascript">
+        $('#polybook-menu-admin').addClass('active');
+    </script>
 
 {% endblock %}
