--- a/polybookexchange/templates/polybookexchange/add_book_request.html
+++ b/polybookexchange/templates/polybookexchange/add_book_request.html
@@ -1,12 +1,12 @@
 {% extends "polybookexchange/base.html" %}
-{% load i18n %}
-{% load polybookexchange_extras %}
+{% load i18n polybookexchange_extras %}
 
 {% block title %}{{block.super}} :: {% trans "New book to sell" %}{% endblock %}
 
 {% block content %}
 
     <h1 class="page-header">{% trans "New book to sell" %}</h1>
+    <hr />
 
     {% if warning_candidate %}
         <div class="alert alert-danger">
@@ -16,19 +16,21 @@
 
     <form method="GET" action="">
 
-        <div class="form-group">
-            <label>{% trans "ISBN:" %}</label>
+        <div class="form-group mb-3">
+            <label class="form-label">{% trans "ISBN:" %}</label>
             <input name="isbn" type="text" class="form-control">
         </div>
-        <div class="form-group">
-            <label>{% trans "Sciper:" %}</label>
+        <div class="form-group mb-3">
+            <label class="form-label">{% trans "Sciper:" %}</label>
             <input name="sciper" type="text" class="form-control">
-            <span class="help-text">{% trans "The sciper of the seller" %}</span>
+            <span class="form-text">{% trans "The sciper of the seller" %}</span>
         </div>
 
-        <button type="submit" class="btn btn-primary pull-right"><i class="glyphicon glyphicon-plus"></i> {% trans "Submit" %}</button>
+        <button type="submit" class="btn btn-primary float-end"><i class="fas fa-plus"></i> {% trans "Submit" %}</button>
     </form>
 
 
-    <script type="text/javascript">$('#polybook-menu-admin').addClass('active');</script>
+    <script type="text/javascript">
+        $('#polybook-menu-admin').addClass('active');
+    </script>
 {% endblock %}
