--- a/polybookexchange/templates/polybookexchange/change_price.html
+++ b/polybookexchange/templates/polybookexchange/change_price.html
@@ -1,19 +1,19 @@
 {% extends "polybookexchange/base.html" %}
-{% load i18n %}
-{% load polybookexchange_extras %}
+{% load i18n polybookexchange_extras %}
 
 {% block title %}{{block.super}} :: {% trans "Change price" %}{% endblock %}
 
 {% block content %}
 
     <h1 class="page-header">{% trans "Change price" %}</h1>
+    <hr />
 
     {% if status == "ok" %}
 
         <div class="alert alert-success">
             {% trans "New price has been saved !" %}
 
-            <a href="{% url 'polybookexchange.views.sales' %}" class="btn btn-info pull-right"><i class="glyphicon glyphicon-list"></i> {% trans "Back" %}</a>
+            <a href="{% url 'polybookexchange.views.sales' %}" class="btn btn-info float-end"><i class="fas fa-list"></i> {% trans "Back" %}</a>
             <br /><br />
         </div>
 
@@ -29,19 +29,21 @@
             {% csrf_token %}
 
             <div class="form-group">
-                <label>{% trans "New price" %}</label>
+                <label class="form-label">{% trans "New price" %}</label>
                 <input name="price" type="text" class="form-control">
-                <span class="help-text">
-                    {% trans "The old price was" %} {{exemplar.price}}
+                <span class="form-text">
+                    {% trans "The old price was" %} {{ exemplar.price|floatformat:2 }}
                 </span>
             </div>
 
-            <button type="submit" class="pull-right btn btn-primary"><i class="glyphicon glyphicon-pencil"></i> {% trans "Save" %}</button>
+            <button type="submit" class="float-end btn btn-primary"><i class="fas fa-pencil"></i> {% trans "Save" %}</button>
 
         </form>
 
     {% endif %}
 
-    <script type="text/javascript">$('#polybook-menu-sales').addClass('active');</script>
+    <script type="text/javascript">
+        $('#polybook-menu-sales').addClass('active');
+    </script>
 
 {% endblock %}
