--- a/polybookexchange/templates/polybookexchange/edit_book.html
+++ b/polybookexchange/templates/polybookexchange/edit_book.html
@@ -1,47 +1,49 @@
 {% extends "polybookexchange/base.html" %}
-{% load i18n %}
-{% load polybookexchange_extras %}
+{% load i18n polybookexchange_extras %}
 
 {% block title %}{{block.super}} :: {% trans "Edit a book" %}{% endblock %}
 
 {% block content %}
 
-    <h1 class="page-header">{% trans "Edit book in database" %}</h2>
+    <h1 class="page-header">{% trans "Edit book in database" %}</h1>
+    <hr />
 
     <form method="POST" action="">
         {% csrf_token %}
 
-        <div class="form-group">
-            <label>{% trans "Title:" %}</label>
-            <input name="title" type="text" class="form-control" value="{{book.title}}">
+        <div class="form-group mb-3">
+            <label class="form-label">{% trans "Title:" %}</label>
+            <input name="title" type="text" class="form-control" value="{{book.title}}" />
         </div>
 
-        <div class="form-group">
-            <label>{% trans "Author(s):" %}</label>
-            <input name="authors" type="text" class="form-control" value="{% for a in book.author.all %}{% if not forloop.first %}, {% endif %}{{ a.name }}{% endfor %}">
-            <span class="help-text">{% trans "Use commas if more than one" %}</span>
+        <div class="form-group mb-3">
+            <label class="form-label">{% trans "Author(s):" %}</label>
+            <input name="authors" type="text" class="form-control" value="{% for a in book.author.all %}{% if not forloop.first %}, {% endif %}{{ a.name }}{% endfor %}" />
+            <span class="form-text">{% trans "Use commas if more than one" %}</span>
         </div>
 
-        <div class="form-group">
-            <label>{% trans "Editor:" %}</label>
-            <input name="publisher" type="text" class="form-control" value="{{book.publisher.name}}">
+        <div class="form-group mb-3">
+            <label class="form-label">{% trans "Editor:" %}</label>
+            <input name="publisher" type="text" class="form-control" value="{{book.publisher.name}}" />
         </div>
 
-        <div class="form-group">
-            <label>{% trans "Year:" %}</label>
-            <input name="year" type="text" class="form-control" value="{{book.year}}">
+        <div class="form-group mb-3">
+            <label class="form-label">{% trans "Year:" %}</label>
+            <input name="year" type="text" class="form-control" value="{{book.year}}" />
         </div>
 
-        <div class="form-group">
-            <label>{% trans "Edition:" %}</label>
-            <input name="edition" type="text" class="form-control" value="{{book.edition}}">
+        <div class="form-group mb-3">
+            <label class="form-label">{% trans "Edition:" %}</label>
+            <input name="edition" type="text" class="form-control" value="{{book.edition}}" />
         </div>
 
-        <button type="submit" class="btn btn-primary pull-right"><i class="glyphicon glyphicon-edit"></i> {% trans "Save" %}</button>
+        <button type="submit" class="btn btn-primary float-end"><i class="fas fa-save"></i> {% trans "Save" %}</button>
 
     </form>
 
 
-    <script type="text/javascript">$('#polybook-menu-admin').addClass('active');</script>
+    <script type="text/javascript">
+        $('#polybook-menu-admin').addClass('active');
+    </script>
 
 {% endblock %}
