--- a/polybookexchange/templates/polybookexchange/exemplar.html
+++ b/polybookexchange/templates/polybookexchange/exemplar.html
@@ -1,6 +1,5 @@
 {% extends "polybookexchange/base.html" %}
-{% load i18n %}
-{% load polybookexchange_extras %}
+{% load i18n polybookexchange_extras %}
 
 {% block title %}{{block.super}} :: {% trans "Details of exemplar" %} {{exemplar.pk}}{% endblock %}
 
@@ -8,74 +7,77 @@
 {% block content %}
 
     <h1 class="page-header">{% trans "Details of exemplar" %} {{exemplar.pk}}</h1>
+    <hr />
 
-    <div class="well">
+    <div class="card">
+        <div class="card-body">
 
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-md-3">
-                    <b>{% trans "State:" %}</b> {{exemplar.state}}
+
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-md-3">
+                        <b>{% trans "State:" %}</b> {{exemplar.state}}
+                    </div>
+                    <div class="col-md-3">
+                        <b>{% trans "Annotated:" %}</b> {{exemplar.annotated|yesno:_("Yes,No")}}
+                    </div>
+                    <div class="col-md-3">
+                        <b>{% trans "Highlighted:" %}</b> {{exemplar.highlighted|yesno:_("Yes,No")}}
+                    </div>
+                    <div class="col-md-3">
+                        <b>{% trans "Price:" %}</b> {{exemplar.price|floatformat:2}} CHF
+                    </div>
                 </div>
-                <div class="col-md-3">
-                    <b>{% trans "Annotated:" %}</b> {{exemplar.annotated|yesno}}
+
+                {% if exemplar.comments %}
+                    <div class="row">
+                        <div class="col-md-12">
+                            <b>{% trans "Seller's comments:" %}</b> {{exemplar.comments}}
+                        </div>
+                    </div>
+                {% endif %}
+
+
+                <div class="row">
+                    <div class="col-md-6">
+                        <b>{% trans "Starting date of sale:" %}</b> {{exemplar.posted_date}} ({{exemplar.posted_date|timesince}})
+                    </div>
+                    <div class="col-md-6">
+                        {% if exemplar.sold_date %}
+                            <b>{% trans "Sold date:" %}</b> {{exemplar.sold_date}}
+                        {% else %}
+                            {% trans "This exemplar hasen't been sold yet." %}
+                        {% endif %}
+                    </div>
                 </div>
-                <div class="col-md-3">
-                    <b>{% trans "Highlighted:" %}</b> {{exemplar.highlighted|yesno}}
-                </div>
-                <div class="col-md-3">
-                    <b>{% trans "Price:" %}</b> {{exemplar.price|floatformat:2}} CHF
-                </div>
+
+
+                {% if user.is_staff %}
+
+                    <div class="row">
+                        <div class="col-md-6">
+                            <b>{% trans "Seller:" %}</b> {% show_name_from_sciper exemplar.seller_id %}
+                        </div>
+                        <div class="col-md-6">
+                            <b>{% trans "Buyer:" %}</b> {% show_name_from_sciper exemplar.buyer_id %}
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-6">
+                            <b>{% trans "Out Reason:" %}</b> {{ exemplar.get_out_reason_display }}
+                        </div>
+                        <div class="col-md-6">
+                        {% if exemplar.money_given_date %}
+                            <b>{% trans "Money given to seller on:" %}</b> {{exemplar.money_given_date}}
+                        {% elif exemplar.out_reason == 'sold' or exemplar.out_reason == 'lost' %}
+                            {% trans "Money has not been given yet" %}
+                        {% else %}
+                            {% trans "No money to give to seller" %}
+                        {% endif %}
+                        </div>
+                    </div>
+                {% endif %}
             </div>
-
-            {% if exemplar.comments %}
-                <div class="row">
-                    <div class="col-md-12">
-                        <b>{% trans "Seller's comments:" %}</b> {{exemplar.comments}}
-                    </div>
-                </div>
-            {% endif %}
-
-
-            <div class="row">
-                <div class="col-md-6">
-                    <b>{% trans "Starting date of sale:" %}</b> {{exemplar.posted_date}} ({{exemplar.posted_date|timesince}})
-                </div>
-                <div class="col-md-6">
-                    {% if exemplar.sold_date %}
-                        <b>{% trans "Sold date:" %}</b> {{exemplar.sold_date}}
-                    {% else %}
-                        {% trans "This exemplar hasen't been sold yet." %}
-                    {% endif %}
-                </div>
-            </div>
-
-
-            {% if user.is_staff %}
-
-                <div class="row">
-                    <div class="col-md-6">
-                        <b>{% trans "Seller:" %}</b> {% show_name_from_sciper exemplar.seller_id %}
-                    </div>
-                    <div class="col-md-6">
-                        <b>{% trans "Buyer:" %}</b> {% show_name_from_sciper exemplar.buyer_id %}
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-md-6">
-                        <b>{% trans "Out Reason:" %}</b> {{ exemplar.get_out_reason_display }}
-                    </div>
-                    <div class="col-md-6">
-                    {% if exemplar.money_given_date %}
-                        <b>{% trans "Money Given to Seller On:" %}</b> {{exemplar.money_given_date}}
-                    {% elif exemplar.out_reason == 'sold' or exemplar.out_reason == 'lost' %}
-                        {% trans "Money has not been given yet" %}
-                    {% else %}
-                        {% trans "No Money to give to Seller" %}
-                    {% endif %}
-                    </div>
-                </div>
-            {% endif %}
-
         </div>
     </div>
 
@@ -87,12 +89,16 @@
 
     {% if user.is_staff %}
 
-        <span class="pull-right">
+        <span class="float-end">
 
             {% if not exemplar.buyer_id %}
-            <a href="{% url 'polybookexchange.views.sell_book' %}?exemplar_id={{exemplar.pk}}" class="btn btn-success"><i class="glyphicon glyphicon-shopping-cart"></i> {% trans "Sell" %}</a>
+                <a href="{% url 'polybookexchange.views.sell_book' %}?exemplar_id={{exemplar.pk}}" class="btn btn-success">
+                    <i class="fas fa-cart-shopping"></i> {% trans "Sell" %}
+                </a>
             {% endif %}
-            <a href="{% url 'polybookexchange.views.exemplar_print' exemplar.pk %}" target="_blank" class="btn btn-info"><i class="glyphicon glyphicon-print"></i> {% trans "Print card" %}</a>
+            <a href="{% url 'polybookexchange.views.exemplar_print' exemplar.pk %}" target="_blank" class="btn btn-info">
+                <i class="fas fa-print"></i> {% trans "Print card" %}
+            </a>
 
         </span>
 
@@ -103,6 +109,8 @@
     {% show_book exemplar.book "True" %}
 
 
-    <script type="text/javascript">$('#polybook-menu-browse').addClass('active');</script>
+    <script type="text/javascript">
+        $('#polybook-menu-browse').addClass('active');
+    </script>
 
 {% endblock %}
