--- a/polybookexchange/templates/polybookexchange/exemplar_print.html
+++ b/polybookexchange/templates/polybookexchange/exemplar_print.html
@@ -15,15 +15,17 @@
 
         <img src="{% url 'polybookexchange.views.gen_bar_code' exemplar.book.isbn %}" style="float: right;">
 
-        {% trans "Details of exemplar" %} <b>{{exemplar.pk}}</b> {% trans "of book" %} <u>{{exemplar.book.title}} ({{exemplar.book.isbn}})</u><br />
-        <br />
+        {% blocktrans with pk=exemplar.pk title=exemplar.book.title isbn=exemplar.book.isbn %}
+            Details of exemplar <b>{{pk}}</b> of book <u>{{title}} ({{isbn}})</u>
+        {% endblocktrans %}
+        <br /><br />
 
         <table style="width: 100%; border: 1px #ddd solid;">
 
             <tr style="margin-bottom: 15px;">
                 <td>{% trans "State" %}: <b>{{ exemplar.state }}</b></td>
-                <td>{% trans "Annotated" %}: <b>{{ exemplar.annotated|yesno:"Oui,Non" }}</b></td>
-                <td>{% trans "Highlighted" %}: <b>{{ exemplar.highlighted|yesno:"Oui,Non" }}</b></td>
+                <td>{% trans "Annotated" %}: <b>{{ exemplar.annotated|yesno:_("Yes,No") }}</b></td>
+                <td>{% trans "Highlighted" %}: <b>{{ exemplar.highlighted|yesno:_("Yes,No") }}</b></td>
                 <td>{% trans "Price" %}: <b>{{ exemplar.price|floatformat:2 }} CHF</b></td>
             </tr>
 
@@ -35,7 +37,13 @@
 
             <tr>
                 <td colspan="2">{% trans "To sale since" %}: <b>{{ exemplar.posted_date }}</b></td>
-                <td colspan="2">{% if exemplar.soldDate %}{% trans "Sold date:" %} <b>{{ exemplar.sold_date }}</b>{% else %}{% trans "Not sold yet" %}{% endif %}</td>
+                <td colspan="2">
+                    {% if exemplar.soldDate %}
+                        {% trans "Sold date:" %} <b>{{ exemplar.sold_date }}</b>
+                    {% else %}
+                        {% trans "Not sold yet" %}
+                    {% endif %}
+                </td>
             </tr>
 
             {% if user.is_staff %}
@@ -46,13 +54,20 @@
 
                 <tr>
                     <td colspan="2"><img src="{% url 'polybookexchange.views.gen_bar_code' exemplar.seller_id %}"></td>
-                    <td colspan="2">{% if exemplar.buyer_id %}<img src="{% url 'polybookexchange.views.gen_bar_code' exemplar.buyer_id %}">{% endif %}</td>
+                    <td colspan="2">
+                        {% if exemplar.buyer_id %}
+                            <img src="{% url 'polybookexchange.views.gen_bar_code' exemplar.buyer_id %}">
+                        {% endif %}
+                    </td>
                 </tr>
 
             {% endif %}
 
         </table>
-        <script type="text/javascript">window.print();</script>
+
+        <script type="text/javascript">
+            window.print();
+        </script>
 
     </body>
 </html>
