--- a/polybookexchange/templates/polybookexchange/index.html
+++ b/polybookexchange/templates/polybookexchange/index.html
@@ -1,14 +1,14 @@
 {% extends "polybookexchange/base.html" %}
-{% load i18n %}
-{% load polybookexchange_extras %}
+{% load i18n polybookexchange_extras %}
 
 {% block title %}{{block.super}} :: {% trans "Home" %}{% endblock %}
 
 {% block content %}
 
     <h1 class="page-header">{% trans "Welcome to AGEPoly's book exchange!" %}</h1>
+    <hr />
 
-    <a href="{% url 'polybookexchange.views.howto' %}">{% trans "How does it works ?" %}</a>
+    <a href="{% url 'polybookexchange.views.howto' %}">{% trans "How does it work ?" %}</a>
 
     <h3>{% trans "Last book to buy" %}</h3>
 
@@ -18,6 +18,8 @@
 
     {% show_book random_exemplar.book "True" %}
 
-    <script type="text/javascript">$('#polybook-menu-home').addClass('active');</script>
+    <script type="text/javascript">
+        $('#polybook-menu-home').addClass('active');
+    </script>
 
 {% endblock %}
