--- a/polybookexchange/templates/polybookexchange/list_candidates.html
+++ b/polybookexchange/templates/polybookexchange/list_candidates.html
@@ -1,12 +1,12 @@
 {% extends "polybookexchange/base.html" %}
-{% load i18n %}
-{% load polybookexchange_extras %}
+{% load i18n polybookexchange_extras %}
 
 {% block title %}{{block.super}} :: {% trans "Candidates list" %}{% endblock %}
 
 {% block content %}
 
     <h1 class="page-header">{% trans "Candidates list" %}</h1>
+    <hr />
 
 
     <table class="table table-striped table-hover">
@@ -25,9 +25,13 @@
 
         <tbody>
             {% for c in candidates %}
-                <tr class="{{c.days_left_color}}">
+                <tr class="table-{{c.days_left_color}}">
                     <td>{{c.pk}}</td>
-                    <td><a href="{% url 'polybookexchange.views.add_book' %}?candidate_id={{c.pk}}" class="btn btn-xs btn-primary"><i class="glyphicon glyphicon-ok"></i> {% trans "Validate" %}</a></td>
+                    <td>
+                        <a href="{% url 'polybookexchange.views.add_book' %}?candidate_id={{c.pk}}" class="btn btn-sm btn-primary">
+                            <i class="fas fa-check"></i> {% trans "Validate" %}
+                        </a>
+                    </td>
                     <td>{{c.isbn}}</td>
                     <td>{{c.sciper}}</td>
                     <td>{{c.price}}</td>
@@ -38,7 +42,10 @@
     </table>
 
 
-    <script type="text/javascript">$('#polybook-menu-admin').addClass('active');</script>
+    <script type="text/javascript">
+        $('#polybook-menu-admin').addClass('active');
+        $('table').DataTable();
+        $('.dataTables_filter input').focus();
+    </script>
 
 {% endblock %}
-
