--- a/polybookexchange/templates/polybookexchange/templatetags/show_for_sem_sec.html
+++ b/polybookexchange/templates/polybookexchange/templatetags/show_for_sem_sec.html
@@ -1,5 +1,5 @@
 {% if val %}
-    <i class="glyphicon glyphicon-ok text-success"></i>
+    <i class="fas fa-check text-success"></i>
 {% else %}
-    <i class="glyphicon glyphicon-remove text-danger"></i>
+    <i class="fas fa-times text-danger"></i>
 {% endif %}
