--- a/polybookexchange/templates/polybookexchange/transactions.html
+++ b/polybookexchange/templates/polybookexchange/transactions.html
@@ -1,12 +1,12 @@
 {% extends "polybookexchange/base.html" %}
-{% load i18n %}
-{% load polybookexchange_extras %}
+{% load i18n polybookexchange_extras %}
 
 {% block title %}{{block.super}} :: {% trans "Transactions list" %}{% endblock %}
 
 {% block content %}
 
     <h1 class="page-header">{% trans "Transactions list" %}</h1>
+    <hr />
 
 
     <table class="table table-striped table-hover">
@@ -21,8 +21,8 @@
         </thead>
 
         <tbody>
-            {% for e in liste.object_list %}
-                <tr class="{% if e.buyer_id %}success{% else %}danger{% endif %}">
+            {% for e in liste %}
+                <tr class="table-{% if e.buyer_id %}success{% else %}danger{% endif %}">
                     <td>{{e.pk}}</td>
                     <td>{% show_name_from_sciper e.seller_id %}</td>
                     <td>{% show_name_from_sciper e.buyer_id %}</td>
@@ -31,23 +31,9 @@
         </tbody>
     </table>
 
-    <ul class="pager">
-        {% if liste.has_previous %}
-            <li class="previous"><a href="?page={{liste.previous_page_number}}">&larr; {% trans "Newer" %}</a></li>
-        {% else %}
-            <li class="previous disabled"><a href="#">&larr; {% trans "Newer" %}</a></li>
-        {% endif %}
-
-        <li>{% blocktrans with n=liste.number p=liste.paginator.num_pages %}Page {{n}} of {{p}}{% endblocktrans %}</li>
-
-        {% if liste.has_next %}
-            <li class="next"><a href="?page={{liste.next_page_number}}">{% trans "Older" %} &rarr;</a></li>
-        {% else %}
-            <li class="next disabled"><a href="#">{% trans "Older" %} &rarr;</a></li>
-        {% endif %}
-
-    </ul>
-
-    <script type="text/javascript">$('#polybook-menu-admin').addClass('active');</script>
+    <script type="text/javascript">
+        $('#polybook-menu-admin').addClass('active');
+        $('table').DataTable();
+    </script>
 
 {% endblock %}
